update samples, remove obsolete profiles
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>